# bp-f103c8

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/inc/controllers/: commCtrl.h  mainController.h  mainCtrl.h  sensorCtrl.h
app/inc/drivers/: spiDrv.h  usartDrv.h
app/src/controllers/: commCtrl.c  mainController.c  mainCtrl.c  sensorCtrl.c
app/src/drivers/: spiDrv.c  usartDrv.c
app/src/services/: TF1012Srvc.c
cmake/: Findtoolchain.cmake
config/: FreeRTOSConfig.h
config/jlink/: erase.jlink  flash.jlink
lib/: CMakeLists.txt  FreeRTOSConfig.h
lib/SEGGER/SystemView_Src_V354/SEGGER/: SEGGER_SYSVIEW_ConfDefaults.h
lib/SEGGER/SystemView_Src_V354/Sample/FreeRTOSV11/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
lib/STM32F103xB/: CMakeLists.txt
lib/STM32F103xB/core/inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
lib/STM32F103xB/core/src/: stm32f1xx_it.c  syscalls.c
lib/utilities/: CMakeLists.txt
lib/utilities/num/: concatNum.c  concatNum.h
